<resources>
    <string name="app_name">WaterDeliveryApp</string>
    <string name="basket_name">Basket</string>
    <string name="add">＋</string>
    <string name="order_text">Order</string>
    <string name="selected_product_img">Select Product</string>
    <string name="count">Count</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="confirm">Confirm</string>

    <string-array name="products">
        <item>Water</item>
        <item>Juice</item>
        <item>Cola</item>
    </string-array>

    <string name="cross">✕</string>
    <string name="empty_basket_hint">Your basket is empty</string>
</resources>